[package]
name = "async-memcached"
version = "0.1.6"
authors = ["Toby Lawrence <toby@nuclearfurnace.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "An Tokio-based memcached client for Rust."
keywords = ["memcached", "async"]

[dependencies]
bytes = "1.4"
nom = "5.0"
dsn = "1.0"
btoi = "0.4"
pin-project = "1.0"
futures = "0.3"
tokio = { version = "1.26", default-features = false, features = ["io-util"] }
async-stream = "0.3"

[dev-dependencies]
lazy_static = "1.4"
tokio = { version = "1.26", features = ["full"] }

[features]
default = []
polonius = []
tcp = []
udp = []
